# yuzito

./: .gitignore  LICENCE  Makefile  README.md  deploy.yml  inventory.ini  pyproject.toml  stream.sh
.devcontainer/: devcontainer.json
src/: __init__.py  camera.py  cli.py  rtmp_server.py  server.py
